<resources>
    <string name="app_name">JetProduct</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="required_point">Rp%d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : Rp%d </string>
    <string name="total_order">Total pesanan : Rp%d </string>
    <string name="back">Back</string>
    <string name="dicoding_reward">Dicoding Reward</string>
    <string name="share_message">Hey, I have redeem %1$d rewards in Dicoding with total %2$d Points. Do you want too?</string>
    <string name="textName">Nurwandhika Rachman</string>
    <string name="textEditProfile">Edit Profile</string>
    <string name="textLoyaltyPoints">Eco Loyalty Points</string>
    <string name="textLoyaltyPointsValue">1,200 🌱</string>
    <string name="textReedemPoints">Redeem Points</string>
    <string name="textWishlist">Wishlist</string>
    <string name="textWishlistValue">5 items saved for later</string>
    <string name="textViewWishlist">View Wishlist</string>
    <string name="textShippingAddress">Shipping Address</string>
    <string name="textShippingAddressValue">Kota Depok, Jawa Barat</string>
    <string name="textManageAddress">Manage Addresses</string>
    <string name="textEmail">nurwan.dhika.rachman@gmail.com</string>
</resources>