...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(130.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("RewardList")
    ) {
        items(orderProduct) { data ->
            Card(
                modifier = Modifier
                    .padding(2.dp)
                    .clickable { navigateToDetail(data.product.productId) },
...
