package com.dicoding.jetreward.model

data class OrderProduct(
    val product: Product,
    val count: Int
)